syntax = "proto3";
//1.添加google的proto引用。注意引用目录，注意两个google的文件之间也有引用，需要根据所放目录进行修改
import "Protos/google/api/annotations.proto";

option csharp_namespace = "GB28181.Service.Protos.Video";

option objc_class_prefix = "ms";

package MediaContract;

// The Video Control service definition.
service VideoSession {
  //LivePlay 播放
  //http://localhost:60500/v1/VideoSession/StartLive  json参数{"hdr":{"Version":"1","sequence":2,"sessionid":"3"},"trans_proto":1,"gbid":"78978201001320000027","ipaddr":"47.115.1.118","port":9000}
  rpc StartLive (StartLiveRequest) returns (StartLiveReply) {
  option (google.api.http) = {
      get: "/v1/VideoSession/StartLive"
      body: "*"
    };}
  //Playback
  rpc StartPlayback (StartPlaybackRequest) returns (StartPlaybackReply) {}
  //Stop Video
  rpc Stop (StopRequest) returns (StopReply) {}
  //PlaybackControl
  rpc PlaybackControl (PlaybackControlRequest) returns (PlaybackControlReply) {}

  //keepalive between two point
  rpc KeepAlive (KeepAliveRequest) returns (KeepAliveReply) {}
}

enum BusinessType {
	BT_LIVEPLAY = 0;
	BT_PLAYBACK = 1;
	BT_DOWNLOAD = 2;
	BT_MAX = 3;
}

enum TransportProtocol {
	TCP = 0;
	UDP = 1;
	MAX = 2;
}

message Header {
	string Version = 1;
    int32 sequence = 2;
	string sessionid = 3;
}

message Status {
    int32 code = 1;
    string msg = 2;
}

message StartLiveRequest {
	Header hdr =1;
	TransportProtocol trans_proto = 2;
	string gbid = 3;//设备通道号
	string ipaddr = 4;//流媒体地址
	int32 port = 5;//端口号
}
message StartLiveReply {
	Header hdr = 1;
	Status status = 2;
	string ipaddr = 3;
	int32 port = 4;
}

message StartPlaybackRequest {
	Header hdr =1;
	TransportProtocol trans_proto = 2;
	int32 port = 3;
	string ipaddr = 4;
	string gbid = 5;
	string begin_time = 7;
	string end_time = 8;
}
message StartPlaybackReply {
	Header hdr = 1;
	Status status = 2;
	string ipaddr = 3;
	int32 port = 4;
}

message StopRequest {
	Header hdr =1;
	string gbid = 2;
	BusinessType business_type =3;
}
message StopReply {
	Header hdr = 1;
	Status status = 2;
}

message KeepAliveRequest {
	Header hdr = 1;
	string gbid = 2;
}
message KeepAliveReply {
	Header hdr = 1;
	Status status = 2;
}

enum PlaybackControlType {
	Pause = 0;
	Resume = 1;
	Moveto = 2;
	Scale = 3;
}
message PlaybackControlRequest {
	Header hdr =1;
	string gbid = 2;
	PlaybackControlType playback_type = 3;
	float scale = 4;
	int64 start_time = 5;
}
message PlaybackControlReply {
	Header hdr = 1;
	Status status = 2;
}